--- a/QuantExt/QuantExt.vcxproj.filters
+++ b/QuantExt/QuantExt.vcxproj.filters
@@ -714,6 +714,9 @@
     <ClInclude Include="qle\indexes\cacpi.hpp">
       <Filter>indexes</Filter>
     </ClInclude>
+    <ClInclude Include="qle\termstructures\capfloortermvolcurve.hpp">
+      <Filter>termstructures</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="cashflows">
