--- a/QuantExt/test/CMakeLists.txt
+++ b/QuantExt/test/CMakeLists.txt
@@ -4,6 +4,7 @@ set(QuantExt-Test_SRC analyticlgmswaptionengine.cpp
 blackvariancecurve.cpp
 bonds.cpp
 cashflow.cpp
+capfloortermvolcurve.cpp
 commodityforward.cpp
 correlationtermstructure.cpp
 cpicapfloor.cpp
