--- a/QuantExt/test/testsuite.vcxproj.filters
+++ b/QuantExt/test/testsuite.vcxproj.filters
@@ -131,6 +131,9 @@
     <ClCompile Include="capfloortermvolcurve.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="piecewiseatmoptionletcurve.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="source">
