[touch: 721]Allow StrippedOptionletAdapter to work with one strike i.e. a curve of optionlet volatilities

--- a/QuantExt/test/Makefile.am
+++ b/QuantExt/test/Makefile.am
@@ -41,6 +41,7 @@ QLE_TESTS = \
 	correlationtermstructure.cpp \
 	cpicapfloor.cpp \
 	strippedoptionletadapter.cpp \
+	strippedoptionletadapter2.cpp \
 	piecewiseoptionletcurve.cpp \
 	piecewiseoptionletstripper.cpp \
 	capfloortermvolcurve.cpp \
