added calenderadjustment test to Makefile and Cmake

--- a/OREData/test/Makefile.am
+++ b/OREData/test/Makefile.am
@@ -3,6 +3,7 @@ OREDATA_TESTS = \
 	testsuite.cpp \
 	bond.cpp \
 	calendars.cpp \
+	calendaradjustment.cpp \
 	fxoption.cpp \
 	ccyswapwithresets.cpp \
 	cpiswap.cpp \
