consistency tests added for cpi cap floor representations

--- a/OREData/test/CMakeLists.txt
+++ b/OREData/test/CMakeLists.txt
@@ -12,6 +12,7 @@ commodityvolcurve.cpp
 commodityvolcurveconfig.cpp
 conventions.cpp
 correlationcurveconfig.cpp
+cpicapfloor.cpp
 cpiswap.cpp
 crossassetmodeldata.cpp
 curveconfig.cpp
