--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="ored\portfolio\instrumentwrapper.hpp" />
     <ClInclude Include="ored\portfolio\legbuilders.hpp" />
     <ClInclude Include="ored\portfolio\legdata.hpp" />
+    <ClInclude Include="ored\portfolio\legdatafactory.hpp" />
     <ClInclude Include="ored\portfolio\nettingsetdefinition.hpp" />
     <ClInclude Include="ored\portfolio\nettingsetmanager.hpp" />
     <ClInclude Include="ored\portfolio\optiondata.hpp" />
@@ -269,6 +270,7 @@
     <ClCompile Include="ored\portfolio\fxswap.cpp" />
     <ClCompile Include="ored\portfolio\legbuilders.cpp" />
     <ClCompile Include="ored\portfolio\legdata.cpp" />
+    <ClCompile Include="ored\portfolio\legdatafactory.cpp" />
     <ClCompile Include="ored\portfolio\nettingsetdefinition.cpp" />
     <ClCompile Include="ored\portfolio\nettingsetmanager.cpp" />
     <ClCompile Include="ored\portfolio\optiondata.cpp" />
