--- a/QuantExt/test/Makefile.am
+++ b/QuantExt/test/Makefile.am
@@ -45,7 +45,8 @@ QLE_TESTS = \
 	piecewiseoptionletcurve.cpp \
 	piecewiseoptionletstripper.cpp \
 	capfloortermvolcurve.cpp \
-	piecewiseatmoptionletcurve.hpp
+	blackvariancesurfacesparse.cpp \
+	piecewiseatmoptionletcurve.cpp
 
 dist-hook:
 	mkdir -p $(distdir)/build
