--- a/QuantExt/test/testsuite.vcxproj.filters
+++ b/QuantExt/test/testsuite.vcxproj.filters
@@ -125,6 +125,9 @@
     <ClCompile Include="blackvariancesurfacesparse.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="blackvariancesurfacestddevs.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
     <ClCompile Include="piecewiseoptionletstripper.cpp">
       <Filter>source</Filter>
     </ClCompile>
